--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "lodash": "^4.17.11",
     "next": "^8.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
