--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -10,6 +10,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv-webpack": "^1.7.0",
+    "isomorphic-unfetch": "^3.0.0",
     "lodash": "^4.17.11",
     "next": "^8.0.4",
     "react": "^16.8.6",
