--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "knex": "^0.16.3",
