--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,9 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "knex": "^0.16.3",
     "knex-migrate": "^1.7.2",
-    "pg": "^7.9.0"
+    "pg": "^7.9.0",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.3",
