--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -28,5 +28,8 @@
     "@babel/node": "^7.2.2",
     "@babel/preset-env": "^7.4.3",
     "nodemon": "^1.18.11"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
