--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "npm run build && next start"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
@@ -22,5 +22,8 @@
     "react-select": "^2.4.2",
     "react-spinners": "^0.5.4",
     "react-toastify": "^5.0.0"
+  },
+  "engines": {
+    "node": "10.x"
   }
 }
