Run migrations when starting the API server

--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "nodemon --exec babel-node src",
     "build": "babel src -d dist",
-    "start": "npm run build && nodemon dist/index.js",
+    "start": "npm run build && knex-migrate up && nodemon dist/index.js",
     "reset-db": "knex-migrate down --to 0 && knex-migrate up && knex seed:run",
     "migrate": "knex-migrate"
   },
