--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -7,13 +7,12 @@
   "scripts": {
     "dev": "nodemon --exec babel-node src",
     "build": "babel src -d dist",
-    "start": "npm run build && knex-migrate up && nodemon dist/index.js",
+    "start": "npm run build && knex-migrate up && node dist/index.js",
     "reset-db": "knex-migrate down --to 0 && knex-migrate up && knex seed:run",
     "migrate": "knex-migrate"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
-    "cors": "^2.8.5",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
