--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -14,7 +14,6 @@
     "classnames": "^2.2.6",
     "dotenv-webpack": "^1.7.0",
     "isomorphic-unfetch": "^3.0.0",
-    "lodash": "^4.17.11",
     "next": "^8.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -22,6 +21,9 @@
     "react-select": "^2.4.2",
     "react-spinners": "^0.5.4",
     "react-toastify": "^5.0.0"
+  },
+  "peerDependencies": {
+    "webpack": "^4.29.6"
   },
   "engines": {
     "node": "10.x"
